--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,9 @@
                 </executions>
                 <configuration>
                     <jvmTarget>1.8</jvmTarget>
+                    <args>
+                        <arg>-XXLanguage:+InlineClasses</arg>
+                    </args>
                 </configuration>
             </plugin>
         </plugins>
